# FrameReader

./: .gitignore  INTEGRATION_SUMMARY.md  README.md  README_ENHANCED.md  README_TRAINING.md  build.sh  check_metadata_jsonl.py  client.py  convert_to_tensorrt.py  create_config.sh  db.sh  demo_enhanced_features.py  demo_features.py  download_dataset.ipynb  main_endpoint.sh  package-lock.json  package.json  pm2.sh  pyproject.toml  recognizer.sh  req.txt  run.sh  server.sh  start_ray.sh  start_ray_with_triton.sh  stop.sh  stream_endpoint.sh  tensorrt_inference.py  test.sh  test_ray.sh  tracker.sh  train.py  train.sh  train_enhanced.py  tritonserver_deployment.py  tritonserver_test.py  tritonserver_test_stream.py  websocket_endpoint.sh
backend/: test_engine.py
backend/donut/: engine.py  model.py
backend/yolo/: model.py
configs/: create_config.py
configs/donut_exp1/: data_config.json  model_config.json  training_config.json  visualization_config.json
configs/exp1/: data_config.json  model_config.json  training_config.json  visualization_config.json
configs/trocr_exp1/: data_config.json  model_config.json  training_config.json
configs/ved_exp1/: model_config.json  training_config.json
core/: __init__.py  base.py  config.py
data/: __init__.py  augmentations.py  cache.py  dataset.py
docker/: Dockerfile  Dockerfile.dockerignore  docker-compose.yml
docs/: Eraser.txt  SQL.txt  report.aux  report.out  report.tex  report.toc
donut/: convert_to_tensorrt.py  dataset.py  inference.py  merge_metrics.py  model.py  plot_metrics.py  train.py  trainer.py  utils.py  visualize_samples.py
models/: __init__.py  donut.py  trocr.py  vision_encoder_decoder.py
notebooks/: download_dataset.ipynb
public/: index.html  site.webmanifest
scripts/: build_models.py  build_models.sh
src/: App.js  FrameReader.sql  Layout.jsx  botsort.yaml  index.js  logging.yaml  theme.js
tracker/: process_video.py
train_donut/: convert.py  dataset.py  engine.py  inference.py  model.py  qat_ptq_inference.py  qat_ptq_trainer.py  train.py  trainer.py  utils.py  valid_metadata_jsonl.py
train_trocr/: dataset.py  inference.py  model.py  train.py  trainer.py  utils.py  valid_metadata_jsonl.py  visualize_samples.py
training/: __init__.py  enhanced_progress.py  metrics.py  trainer.py  visualization.py
visualization/: __init__.py  attention.py  inference.py  realtime_inference.py
yolo/: inference.py
(+84 files in other folders)
