[project]
name = "framereader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jwt>=1.3.1",
    "pydantic-settings>=2.9.1",
    "pymysql>=1.1.1",
    "pytest>=8.4.0",
    "rich>=14.0.0",
]
