[project]
name = "train-framereader"
version = "1.0.0"
description = "Project FrameReader"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==1.6.0",
    "chardet>=5.2.0",
    "cuda-python>=13.0.1",
    "datasets==3.6.0",
    "diffusers==0.33.1",
    "dotenv==0.9.9",
    "hf-xet>=1.1.10",
    "huggingface-hub==0.30.2",
    "kagglehub>=0.3.13",
    "lmdb>=1.7.3",
    "matplotlib==3.10.3",
    "nltk==3.9.1",
    "notebook>=7.4.3",
    "numpy==1.24.1",
    "nvidia-modelopt",
    "onnx==1.18.0",
    "onnxruntime-gpu==1.20.2",
    "opencv-python>=4.8.1.78",
    "pillow==11.1.0",
    "python-dotenv==1.0.1",
    "rich==13.9.4",
    "seaborn>=0.13.2",
    "sentencepiece==0.2.0",
    "tensorboard==2.19.0",
    "tensorrt==10.9.0.34",
    "timm>=1.0.19",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "torch-tensorrt==2.7.0",
    "torchvision==0.22.0",
    "tqdm==4.67.1",
    "transformers>=4.52.4",
    "zss>=1.2.0",
]

[tool.uv.sources]
nvidia-modelopt = { git = "https://github.com/NVIDIA/TensorRT-Model-Optimizer.git", rev = "9c54aa1c47871d0541801a20962996461d805162" }

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
